@@ -3,6 +3,7 @@ Revision history for Perl extension XTaTIK.
 0.004002 2015-09-13
     [Miscellaneous]
         - Made footer addresses look good for 1–6 locations (#129)
+        - Made it possible to specify shoutout art for the animation
 
 0.004001 2015-09-12
     [Breaking Changes]
